--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "chess_bot",
   "version": "1.0.0",
-  "description": "",
   "main": "board.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "description": ""
 }
